--- a/src/app/Navbar/nav.module.css
+++ b/src/app/Navbar/nav.module.css
@@ -1,3 +1,17 @@
 .navbar {
-font-size: x-large;
+  
+    
+  }
+
+.menu {
+    display: flex;
+    justify-content: space-around;
+    list-style-type: none;
+    padding: 0;
+    text-decoration: none;
 }
+
+.menu li {
+    margin-left: 200px;
+}
+
